# n_body_simulation

./: CMakeLists.txt  README.md  build.bat  build.sh  main.cpp
include/gui/: camera.hpp  shader.hpp
include/simulation/: body.hpp  quadTree.hpp  simulation.hpp
resources/shaders/fragmentShaders/: bigNBodies.frag  line.frag  threeBodies2dTrail.frag  threeBodies3d.frag
resources/shaders/vertexShaders/: bigNBodies.ver  line.ver  threeBodies2d.ver  threeBodies2dTrail.ver  threeBodies3d.ver
src/gui/: camera.cpp  shader.cpp
src/simulation/: body.cpp  quadTree.cpp
